--- a/ios/index.html
+++ b/ios/index.html
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
 <i>A bi-weekly blog about </i> 💻<i>Software Development,</i> 📱<i>iOS and </i>🛡️<i>Mobile Application Security</i>
 <div class="posts">
   {% for post in site.categories.ios %}
